--- a/app/src/main/res/layout/activity_location_details.xml
+++ b/app/src/main/res/layout/activity_location_details.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".ui.activity.LocationDetailsActivity"
     tools:ignore="MissingPrefix">
@@ -26,16 +25,33 @@
             app:expandedTitleGravity="center_horizontal"
             app:expandedTitleMarginEnd="@dimen/marginLarge"
             app:expandedTitleMarginStart="@dimen/marginLarge"
+            app:expandedTitleMarginTop="@dimen/detailImageHeight"
             app:expandedTitleTextAppearance="@style/ExpandedTitleTextAppearance"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/backdrop"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax">
+
+                <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop" />
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="@dimen/detailImageWidth"
+                    android:layout_height="@dimen/detailImageHeight"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/margin"
+                    android:scaleType="centerCrop"
+                    android:transitionName="@string/transitionNameCircle"
+                    app:layout_collapseMode="parallax" />
+            </FrameLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
