--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="textDefault">#444</color>
     <color name="textLight">#666</color>
     <color name="imagePlaceholder">#eee</color>
-    <color name="filterBackground">#eee</color>
+    <color name="filterBackground">#fff</color>
     <color name="navigationBarBackground">#ccc</color>
     <color name="defaultBackground">#fbfbfb</color>
 </resources>
