--- a/app/src/main/res/layout/activity_location_details.xml
+++ b/app/src/main/res/layout/activity_location_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/defaultBackground"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".ui.activity.LocationDetailsActivity"
@@ -55,7 +56,6 @@
                     android:layout_gravity="center"
                     android:layout_marginBottom="@dimen/margin"
                     android:scaleType="centerCrop"
-                    android:transitionName="@string/transitionNameCircle"
                     app:layout_collapseMode="parallax" />
             </FrameLayout>
 
