--- a/app/src/main/res/layout/fake_info_window.xml
+++ b/app/src/main/res/layout/fake_info_window.xml
@@ -2,4 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="0dp"
     android:layout_height="0dp"
-    android:orientation="vertical"/>
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" " />
+</FrameLayout>
