--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,25 +28,37 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/margin"
-                android:layout_marginRight="@dimen/marginLarge"
                 android:paddingBottom="@dimen/marginTiny"
                 android:text="@string/app_name"
                 android:textColor="?attr/colorAccent"
                 android:textSize="@dimen/textSizeToolbar" />
 
+            <android.support.v4.widget.Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/marginLarge"
                 android:layout_marginRight="@dimen/marginLarge"
-                android:layout_weight="1"
+                app:tabPaddingEnd="@dimen/margin"
+                app:tabPaddingStart="@dimen/margin"
                 app:tabSelectedTextColor="@android:color/white"
                 app:tabTextColor="@android:color/white" />
+
+            <android.support.v4.widget.Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
 
             <ImageButton
                 style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/marginLarge"
                 android:src="@drawable/ic_search_24dp" />
         </LinearLayout>
     </android.support.design.widget.AppBarLayout>
