refactored to improve dagger usage

--- a/app/src/main/res/layout/fragment_beers.xml
+++ b/app/src/main/res/layout/fragment_beers.xml
@@ -10,4 +10,4 @@
     android:paddingTop="@dimen/marginSmall"
     android:scrollbarStyle="outsideOverlay"
     android:scrollbars="vertical"
-    tools:listitem="@layout/item_brewery" />
+    tools:listitem="@layout/view_brewery_location" />
