--- a/app/src/main/res/layout/activity_brewery.xml
+++ b/app/src/main/res/layout/activity_brewery.xml
@@ -7,7 +7,7 @@
     android:background="@color/defaultBackground"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".ui.locationDetails.LocationDetailsActivity"
+    tools:context=".ui.brewery.BreweryActivity"
     tools:ignore="MissingPrefix">
 
     <android.support.design.widget.AppBarLayout
