--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,9 +36,7 @@
 
     <style name="ExpandedTitleTextAppearance">
         <item name="android:textSize">@dimen/textSizeDetailHeadline</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:shadowColor">#44000000</item>
-        <item name="android:shadowRadius">4</item>
+        <item name="android:textColor">@color/textDefault</item>
     </style>
 
 </resources>
