--- a/app/src/main/res/layout/activity_brewery.xml
+++ b/app/src/main/res/layout/activity_brewery.xml
@@ -1,112 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/defaultBackground"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".ui.brewery.BreweryActivity"
     tools:ignore="MissingPrefix">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/detailHeaderHeight"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="wrap_content">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbar"
+        <LinearLayout
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:collapsedTitleTextAppearance="@style/CollapsedTitleTextAppearance"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleGravity="center_horizontal"
-            app:expandedTitleMarginEnd="@dimen/marginLarge"
-            app:expandedTitleMarginStart="@dimen/marginLarge"
-            app:expandedTitleMarginTop="@dimen/detailImageHeight"
-            app:expandedTitleTextAppearance="@style/ExpandedTitleTextAppearance"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:elevation="4dp"
+            android:orientation="horizontal">
 
-            <FrameLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/toolbarTitle"
+                fontPath="@string/fontPathHeadline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/margin"
+                android:paddingBottom="@dimen/marginTiny"
+                android:textColor="?attr/colorAccent"
+                android:textSize="@dimen/textSizeToolbar"
+                tools:text="Brewery Name" />
+
+            <android.support.v4.widget.Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageButton
+                style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@android:color/white"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax">
-
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="@dimen/detailImageWidth"
-                    android:layout_height="@dimen/detailImageHeight"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="@dimen/margin"
-                    android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax" />
-            </FrameLayout>
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
+                android:layout_marginLeft="@dimen/marginLarge"
+                android:src="@drawable/ic_search_24dp" />
+        </LinearLayout>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/beersRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/infoScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
-            android:id="@+id/headerWrapper"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/margin">
-
-            <TextView
-                android:id="@+id/description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/marginLarge"
-                android:textColor="@color/textDefault"
-                android:textSize="@dimen/textSizeDefault"
-                tools:text="Description" />
-
-            <TextView
-                fontPath="@string/fontPathBold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/marginSmall"
-                android:singleLine="true"
-                android:text="Location"
-                android:textAllCaps="true"
-                android:textColor="@color/textLight"
-                android:textSize="@dimen/textSizeSmall" />
-
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/textDefault"
-                android:textSize="@dimen/textSizeDefault"
-                tools:text="Street address" />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+        android:layout_height="match_parent"
+        android:background="@color/defaultBackground"
+        tools:listitem="@layout/view_beer" />
 
 </android.support.design.widget.CoordinatorLayout>
